[gd_scene load_steps=3 format=3 uid="uid://c33tertlfci8r"]

[ext_resource type="Script" path="res://scenes/gui/components/time_ui.gd" id="1_yqhxh"]
[ext_resource type="LabelSettings" uid="uid://du8flicqbonao" path="res://assets/fonts/style_number.tres" id="2_7xenh"]

[node name="TimeUI" type="Control"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 192.0
offset_bottom = 51.0
grow_horizontal = 2
script = ExtResource("1_yqhxh")

[node name="TimeBasic" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 8.0
offset_right = 376.0
offset_bottom = 51.0
size_flags_vertical = 1
text = "6 : 00"
label_settings = ExtResource("2_7xenh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.0
offset_top = 56.0
offset_right = 146.0
offset_bottom = 96.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TimeExt" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "1098 年 12 月 30 日"
label_settings = ExtResource("2_7xenh")
vertical_alignment = 1

[node name="TimeScale" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "(1.0x)"
label_settings = ExtResource("2_7xenh")
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
